[package]
name = "raft-runtime"
version = "0.1.0"
edition = "2024"

[features]
std = ["raft-ast/std"]
default = ["std"]

[dependencies]
raft-ast = { path = "../ast", default-features = false }
smallvec = "1.0"

[dev-dependencies]
criterion = "0.8.2"
pyo3 = { version = "0.29", features = ["auto-initialize"] }

[[bench]]
name = "vm"
harness = false
