[package]
name = "raft-runtime"
version = "0.1.0"
edition = "2024"

[features]
std = ["raft-ast/std"]
default = ["std"]

[dependencies]
raft-core = { path = "../core" }
raft-ast = { path = "../ast", default-features = false }
smallvec = { version = "1.0", default-features = false }
hashbrown = { version = "0.12", default-features = false }
foldhash = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = "0.8.2"
pyo3 = { version = "0.29", features = ["auto-initialize"] }

[[bench]]
name = "vm"
harness = false
