[package]
name = "raft-runtime"
version = "0.1.0"
edition.workspace = true

[features]
std = ["raft-ast/std", "amity/parking_lot", "raft-core/std"]
# Transpiled-bundle support: Runtime can generate bundle crates from Raft
# sources (via raft-rust), build them with cargo, and link the produced
# cdylibs (holding them for its own lifetime).
bundle = ["std", "dep:raft-rust", "dep:libloading"]
default = ["std", "bundle"]

[dependencies]
raft-core = { path = "../core" }
raft-ast = { path = "../ast", default-features = false }
raft-rust = { path = "../rust", optional = true }
libloading = { version = "0.8", optional = true }
smallvec = { version = "1.0", default-features = false }
hashbrown = { version = "0.12", default-features = false }
foldhash = { version = "0.2", default-features = false }
amity = { version = "0.6", default-features = false, features = ["ring-buffer", "flip-queue"] }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
smol = "2.0"
criterion = "0.8.2"
pyo3 = { version = "0.29", features = ["auto-initialize"] }

[[bench]]
name = "vm"
harness = false
