[package]
name = "raft-rust"
version = "0.1.0"
edition.workspace = true
description = "Raft-to-Rust transpiler and runtime support for transpiled bundles"

[dependencies]
raft-ast = { path = "../ast" }

[dev-dependencies]
smol = "2.0"
raft-core = { path = "../core" }
raft-runtime = { path = "../runtime" }
